--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,17 @@
 
+:root{
+    --azul: #09f;
+    --branco: #fff;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
+}
+
+.container {
+    margin: 0 auto;
+    max-width: 480px;
 }
