--- a/src/shared/Table/Table.scss
+++ b/src/shared/Table/Table.scss
@@ -33,10 +33,10 @@ table.AppTable {
             td {
                 padding: 7px 10px;
                 color: #222;
+            }
 
-                &:last-child{
-                    text-align: right;
-                }
+            .right{
+                text-align: right;
             }
         }
     }
