--- a/src/shared/Table/Table.scss
+++ b/src/shared/Table/Table.scss
@@ -8,7 +8,6 @@ table.AppTable {
         background-color: var(--azul);
 
         tr th {
-            
             color: rgba(#fff, 0.8);
             text-align: left;
             padding: 7px 10px;
@@ -17,7 +16,7 @@ table.AppTable {
             text-transform: uppercase;
             letter-spacing: 0.75px;
 
-            &:last-child{
+            &:last-child {
                 text-align: right;
             }
         }
@@ -25,9 +24,8 @@ table.AppTable {
 
     tbody {
         tr {
-            &:hover{
-                background-color: rgba(#000, .05);
-                
+            &:hover {
+                background-color: rgba(#000, 0.05);
             }
 
             td {
@@ -35,9 +33,15 @@ table.AppTable {
                 color: #222;
             }
 
-            .right{
+            .right {
                 text-align: right;
             }
+        }
+    }
+
+    .actions {
+        > *:not(:last-child) {
+            margin-right: 5px;
         }
     }
 }
