--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,10 @@
 header.AppHeader{
     background-color: #09f;
     color: #fff;
-    height: 50px;
+    height: 80px;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
@@ -13,4 +14,13 @@ header.AppHeader{
 
 header.AppHeader h1{
     font-size: 1.4em;
+    margin-bottom: 7px;
+}
+
+
+header.AppHeader span{
+    cursor: pointer;
+    display: block;
+    padding: 2px 0;
+    text-align: center;
 }
